# win_swap

./: Cargo.toml  LICENSE  README.md
src/: error.rs  fuzzy.rs  hotkey.rs  main.rs  win_info.rs
