[package]
name = "win_swap"
version = "0.1.0"
repository = "https://github.com/worstmageplayer/win_swap"
readme = "README.md"
license = "MIT"
edition = "2024"

[dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse" ,
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
] }
